--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,16 @@
   margin: 10% 0 5% 0;
 }
 
+.smallLink {
+  text-decoration: none !important;
+  color: black;
+}
+
+.smallLink:hover {
+  text-decoration: none !important;
+  color: rgb(102, 102, 102) !important;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
