--- a/src/App.css
+++ b/src/App.css
@@ -59,6 +59,10 @@
   margin-top: 3%;
 }
 
+.below {
+  margin-bottom: 3%;
+}
+
 .heading {
   color: rgb(115, 192, 255) !important;
   text-shadow: 2px 2px black;
