--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,10 @@
   text-shadow: 0;
 }
 
+.nounderline {
+  text-decoration: none !important;
+}
+
 .navLink {
   color:white !important;
   text-decoration: none !important;
